--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <header>
-        <img src="MOMA HEADER.jpg" alt="Picture shows a person visiting the museum looking at the art pieces.">
+        <img src="resources/MOMA HEADER.jpg" alt="Picture shows a person visiting the museum looking at the art pieces.">
     </header>
 
 
