Added placeholder and isotype visualization

--- a/html/index.html
+++ b/html/index.html
@@ -19,21 +19,29 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap">
     
     <!-- Import Franklin Gothic Demi Font -->
-    <!-- Replace 'your-franklin-gothic-demi-font-url' with the actual URL of the font file -->
-    <style>
-    @font-face {
-        font-family: 'Franklin Gothic Demi';
-        src: url('your-franklin-gothic-demi-font-url');
-        font-weight: normal;
-        font-style: normal;
-        }
-    </style>
+
 
 </head>
 <body>
     <header>
         <img src="resources/MOMA HEADER.jpg" alt="Picture shows a person visiting the museum looking at the art pieces.">
     </header>
+    <p>
+        The Museum of Modern Art (MoMA), located in New York City, 
+        stands as a global beacon for modern and contemporary art. </p>
+
+    <p> We can see globally, the distribution of works hosted by the museum: </p>
+    <p> Placeholder 2 </p>
+    <p> Placeholder 3 </p>
+    <p> Placeholder 4 </p>
+    <p> Placeholder 5 </p>
+    <p> Placeholder 7 </p>
+
+    <p> MoMA has played a pivotal role in shaping 
+        the art world's landscape, showcasing groundbreaking works by 
+        renowned artists and serving as a platform for the avant-garde. 
+        Its collection spans various mediums, 
+        including paintings, sculptures, photography, film, and design.</p>
 
 
 </body>
