Updated html files

--- a/index.html
+++ b/index.html
@@ -19,28 +19,38 @@
         <header>
             <img src="resources/MOMA HEADER.jpg" alt="Picture shows a person visiting the museum looking at the art pieces.">
         </header>
-        <p>
-            The Museum of Modern Art (MoMA), located in New York City, 
-        stands as a global beacon for modern and contemporary art.
-        </p>
+
+        <p>The Museum of Modern Art (MoMA), located in New York City, 
+        stands as a global beacon for modern and contemporary art. Its galleries house a diverse array of artworks that resonate with the artistic movements of our time.</p>
+        <h2>MoMA Location</h2>
         <div id="choropleth_map"></div>
-        <div id="global_map"></div>
+        
         <p> We can see globally, the distribution of works hosted by the museum:</p>
-        <p> Gender breakdown</p>
+        <h2>Global distribition of artworks</h2>
+        <div id="global_map"></div>
+        <p>Zooming out, our global map offers a comprehensive view of MoMA's worldwide influence. By illustrating the dispersion of artworks, this visualization underlines the museum's role as a cultural ambassador, fostering a cross-cultural dialogue through the language of art.</p>
+
+        <h2>Gender breakdown of all artists</h2>
         <div id="isotype"></div>
-        <p> Department vs Gender Breakdown</p>
+        <p>Delving into the collection's gender breakdown, we observe a notable majority of male artists, surpassing their female counterparts. This visualization prompts us to reflect on the historical context of art creation, shedding light on gender disparities within the art world. It serves as a call to action, emphasizing the importance of fostering inclusivity and equality in artistic representation.</p>
+
+        <h2>Department vs Gender Breakdown</h2>
         <div id="splitbar"></div>
-        <p> Placeholder 4</p>
-        <p> Placeholder 5</p>
-        <p> Placeholder 7</p>
+        <p>Examining the intersection of departments and gender breakdown, this visualization reveals nuanced patterns within MoMA's collection. By exploring the distribution of genders across different art departments, we gain insights into the diverse narratives and perspectives captured by each department. It underscores the importance of recognizing and celebrating the contributions of artists across genders and disciplines.</p>
+
+        <h2>Distribution of works between the time taken, the country and the number of art pieces created</h2>
         <div id="scatter_plot"></div>
+        
         <p>
-            MoMA has played a pivotal role in shaping 
-        the art world's landscape, showcasing groundbreaking works by 
-        renowned artists and serving as a platform for the avant-garde. 
-        Its collection spans various mediums, 
-        including paintings, sculptures, photography, film, and design.
+          This choice enables the exploration of potential patterns or correlations between the temporal aspect of art creation and the overall quantity of artworks across different nations. The scatter plot not only facilitates the identification of trends and outliers but also allows for a comparative analysis of countries, shedding light on their relative efficiency in art production. Through this visual representation, it becomes easier to discern if certain countries consistently produce art more quickly or take more time to create fewer pieces. Moreover, the scatter plot serves as an insightful tool for correlation analysis, providing a quick and accessible means to gauge the nature and strength of the relationship between the two variables—time taken and the number of art pieces—thereby contributing to a comprehensive understanding of artistic production dynamics on a global scale.
         </p>
+
+        <h2>Findings and Summary</h2>
+        <p>In summary, these visualizations not only illuminate aspects of MoMA's collection but also provoke thoughtful discussions on global influence, gender representation, departmental diversity, and the intricacies of artistic creation. They serve as powerful tools for fostering dialogue, encouraging critical reflection, and furthering the appreciation of art in all its dimensions.</p>
+
+        <h2>References</h2>
+
+
         <footer>
             <p>Created by Goh Chia Ching, 32203004</p>
         </footer>
