--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="choropleth_map"></div>
         
         <p> We can see globally, the distribution of works hosted by the museum:</p>
-        <h2>Global distribition of artworks</h2>
+        <h2>Global distribution of artworks</h2>
         <div id="global_map"></div>
         <p>Zooming out, our global map offers a comprehensive view of MoMA's worldwide influence. By illustrating the dispersion of artworks, this visualization underlines the museum's role as a cultural ambassador, fostering a cross-cultural dialogue through the language of art.</p>
 
