--- a/index.html
+++ b/index.html
@@ -4,43 +4,37 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
         <!-- vegalite imports -->
         <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
         <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
         <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
         <script src="vega_lite_vis.js"></script>
-        
-
-        <!-- font and style sheets -->        
+        <!-- font and style sheets -->
         <link
             rel="stylesheet"
             href="https://unpkg.com/purecss@2.0.3/build/pure-min.css"
             integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ"
             crossorigin="anonymous"
-        >     
+        >
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap">
-
         <!-- title -->
         <title>MoMA Exploration</title>
-  
-      </head>
+    </head>
     <body>
-
         <div class="page">
             <header>
                 <img src="resources/MOMA HEADER.jpg" alt="Picture shows a person visiting the museum looking at the art pieces.">
             </header>
-
             <div class="pure-g">
-                <div class="pure-u-1-1">
+                <div class="pure-u-1-2">
                     <p>
                         The Museum of Modern Art (MoMA), located in New York City, 
-        stands as a global beacon for modern and contemporary art. Its galleries house a diverse array of artworks that resonate with the artistic movements of our time.
+        stands as a global beacon for modern and contemporary art. Its galleries house a diverse array of artworks that resonate with the artistic movements of our time. This visualization was done in order to analyze and explore the trends and artistic movements related to country and how it shapes our culture today.
                     </p>
-                    <h2>MoMA Location</h2>
+                </div>
+                <div class="pure-u-1-2">
                     <div id="choropleth_map"></div>
                 </div>
             </div>
@@ -83,7 +77,6 @@
                     <p>In summary, these visualizations not only illuminate aspects of MoMA's collection but also provoke thoughtful discussions on global influence, gender representation, departmental diversity, and the intricacies of artistic creation. They serve as powerful tools for fostering dialogue, encouraging critical reflection, and furthering the appreciation of art in all its dimensions.</p>
                 </div>
             </div>
-
             <footer>
                 <p>Created by Goh Chia Ching, 32203004</p>
             </footer>
