Updated size for moma location

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <h2>Global distribution of artworks</h2>
                     <div id="global_map"></div>
                     <p>Zooming out, our global map offers a comprehensive view of MoMA's worldwide influence. By illustrating the dispersion of artworks, this visualization underlines the museum's role as a cultural ambassador, fostering a cross-cultural dialogue through the language of art.</p>
+                    <div id="bump"></div>
                 </div>
             </div>
             <div class="pure-g">
@@ -108,6 +109,11 @@
 
         var vis7= "visualizations/artist_period_count.vl.json";
         vegaEmbed('#bar', vis7, {"actions": false}).then(function(result) {
+          // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+        }).catch(console.error);
+
+        var vis8= "visualizations/top_countries.vl.json";
+        vegaEmbed('#bump', vis8, {"actions": false}).then(function(result) {
           // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
         }).catch(console.error);
         </script>
