Updated container size

--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
                 </div>
             </div>
             <div class="pure-g">
-                <div class="pure-u-1-1">
-                    <h2>Gender breakdown of all artists</h2>
-                    <div id="isotype"></div>
-                    <div id="pie"></div>
+                <h2>Gender breakdown of all artists</h2>
+                <div class="pure-u-1-2">
+                    <div id="isotype"></div></div>
+                    <div class="pure-u-1-2">
+                    <div id="pie"></div></div>
                     <p>Delving into the collection's gender breakdown, we observe a notable majority of male artists, surpassing their female counterparts. This visualization prompts us to reflect on the historical context of art creation, shedding light on gender disparities within the art world. It serves as a call to action, emphasizing the importance of fostering inclusivity and equality in artistic representation.</p>
                 </div>
             </div>
