--- a/index.html
+++ b/index.html
@@ -40,32 +40,36 @@
             </div>
             <div class="pure-g">
                 <div class="pure-u-1-1">
-                    <p> Next we can see the global distribution of works hosted by the museum: </p>
+                    <p> Next we can see the global distribution of works hosted by the museum:</p>
                     <h2>Global distribution of artworks</h2>
                     <div id="global_map"></div>
-                    <p>Zooming out, our global map offers a comprehensive view of MoMA's worldwide influence. By illustrating the dispersion of artworks, this visualization underlines the museum's role as a cultural ambassador, fostering a cross-cultural dialogue through the language of art.
+                    <p>
+                        Zooming out, our global map offers a comprehensive view of MoMA's worldwide influence. By illustrating the dispersion of artworks, this visualization underlines the museum's role as a cultural ambassador, fostering a cross-cultural dialogue through the language of art.
 
-                      Additionally, the visualization highlights that among the top countries contributing significantly to MoMA's collection are the <b>United States, Spain, and Russia </b>. This underscores the global nature of MoMA's acquisitions, showcasing a diverse range of artistic expressions and cultural influences from these nations.
-
-
+                      Additionally, the visualization highlights that among the top countries contributing significantly to MoMA's collection are the
+                        <b>United States, Spain, and Russia</b>
+                        . This underscores the global nature of MoMA's acquisitions, showcasing a diverse range of artistic expressions and cultural influences from these nations.
                     </p>
                     <div id="bump"></div>
                 </div>
-            </div>
-            <div class="pure-g">
-                <h2>Gender breakdown of all artists</h2>
-                <div class="pure-u-1-2">
-                    <div id="isotype"></div></div>
+                <div class="pure-g">
                     <div class="pure-u-1-2">
-                    <div id="pie"></div></div>
-                    <p>Delving into the collection's gender breakdown, we observe a notable majority of male artists, surpassing their female counterparts. This visualization prompts us to reflect on the historical context of art creation, shedding light on gender disparities within the art world. It serves as a call to action, emphasizing the importance of fostering inclusivity and equality in artistic representation.</p>
+                        <h2>Gender breakdown of all artists</h2>
+                        <div id="isotype"></div>
+                    </div>
+                    <div class="pure-u-1-2">
+                        <div id="pie"></div>
+                    </div>
+                    <div class="pure-u-1-1">
+                        <p>Delving into the collection's gender breakdown, we observe a notable majority of male artists, surpassing their female counterparts. This visualization prompts us to reflect on the historical context of art creation, shedding light on gender disparities within the art world. It serves as a call to action, emphasizing the importance of fostering inclusivity and equality in artistic representation.</p>
+                    </div>
                 </div>
             </div>
             <div class="pure-g">
                 <div class="pure-u-1-1">
                     <h2>Department vs Gender Breakdown</h2>
                     <div id="splitbar"></div>
-                    <p>By exploring the distribution of genders across different art departments, we gain insights into the diverse narratives and perspectives captured by each department. </p>
+                    <p>By exploring the distribution of genders across different art departments, we gain insights into the diverse narratives and perspectives captured by each department.</p>
                 </div>
             </div>
             <div class="pure-g">
@@ -85,24 +89,27 @@
                 </div>
             </div>
             <div class="pure-g">
-              <div class="pure-u-1-1">
-                  <h2>References</h2>
-                  <p> lalala </p>
-                  <blockquote>
-                    <p>This is a block quotation with a citation:</p>
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua" (<cite>Author, Year, p. 123</cite>).</p>
-                </blockquote>
-              </div>
-          </div>
+                <div class="pure-u-1-1">
+                    <h2>References</h2>
+                    <p> lalala</p>
+                    <blockquote>
+                        <p>This is a block quotation with a citation:</p>
+                        <p>
+                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore
+                        magna aliqua" (
+                            <cite>Author, Year, p. 123</cite>).
+                        </p>
+                    </blockquote>
+                </div>
+            </div>
             <footer>
-                <p>Created by Goh Chia Ching, 32203004
-                  Dataset acquired from <a href="https://github.com/MuseumofModernArt/collection">The Museum of Modern Art (MoMA) Collection.</a>
+                <p>Created by Goh Chia Ching, 32203004.</p>
+                <p>
+                    Dataset acquired from
+                    <a href="https://github.com/MuseumofModernArt/collection">The Museum of Modern Art (MoMA) Collection.</a>
                 </p>
             </footer>
         </div>
-
-
         <!-- JAVASCRIPT -->
         <script type="text/javascript">
         var vis1 = "visualizations/moma_location.vl.json";
